k8s/deploy-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cronjob-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cronjob-api
  template:
    metadata:
      labels:
        app: cronjob-api
    spec:
      containers:
        - name: api
          image: artearenahub/cronjob-api:latest
          ports:
            - containerPort: 8003
