k8s/front-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cronjob-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cronjob-frontend
  template:
    metadata:
      labels:
        app: cronjob-frontend
    spec:
      containers:
        - name: frontend
          image: artearenahub/cronjob-frontend:latest
          ports:
            - containerPort: 80
