k8s/api-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: cronjob-api-svc
spec:
  selector:
    app: cronjob-api
  ports:
    - port: 8003
      targetPort: 8003
