k8s/front-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: cronjob-frontend-svc
spec:
  selector:
    app: cronjob-frontend
  ports:
    - port: 80
      targetPort: 80
