k8s/frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cronjob-frontend
  namespace: cronjob
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cronjob-frontend
  template:
    metadata:
      labels:
        app: cronjob-frontend
    spec:
      containers:
        - name: frontend
          image: artearenahub/cronjob-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cronjob-frontend
  namespace: cronjob
spec:
  selector:
    app: cronjob-frontend
  ports:
    - port: 80
      targetPort: 80
