k8s/ing-api.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cronjob-api
  annotations:
    cert-manager.io/cluster-issuer: cronjob-cluster-issuer
    spec.ingressClassName: "public"
spec:
  ingressClassName: public
  tls:
    - hosts:
        - api.cronjob.spacearena.net
      secretName: cronjob-tls
  rules:
    - host: api.cronjob.spacearena.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cronjob-api-svc
                port:
                  number: 8003
