k8s/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cronjob-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cronjob.spacearena.net
      secretName: cronjob-tls
  rules:
    - host: cronjob.spacearena.net
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: cronjob-api-svc
                port:
                  number: 8000
          - path: /()(.*)
            pathType: Prefix
            backend:
              service:
                name: cronjob-frontend-svc
                port:
                  number: 80
